# XINIM

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BUILD.bazel  BUILDING.md  BUILD_REPORT.md  BUILD_STATUS.md  BUILD_SYSTEMS_COMPARISON.md  CMakeLists.txt  CMakeLists.txt.backup_20250901_225528  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  MIGRATION_REPORT.md  Makefile  POSIX_CPP23_IMPLEMENTATION.md  POSIX_TOOLS_ANALYSIS.md  PROJECT_STATUS.md  README.md  REPOSITORY_HYGIENE.md  ROADMAP.md  SIMD_LIBRARY_COMPLETE.md  TREE.txt  TREE_CLASSIFIED.txt  WORKSPACE.bazel  analysis_cloc.txt  analysis_cloc_detailed.txt  analysis_cppcheck.txt  analysis_cscope_fresh.txt  analysis_cscope_summary.txt  analysis_ctags_summary.txt  analysis_flawfinder.txt  analysis_flawfinder_fresh.txt  analysis_inline_asm.txt  analysis_inline_asm_fresh.txt  (+51 more)
KERNEL/: CMakeLists.txt
KERNEL/IPC/: CMakeLists.txt  README.md  lattice_ipc.cpp
commands/: .clang-format 2  .clang-tidy  CMakeLists.txt  CMakeLists_mined.txt  Makefile  XINIM_UTILITIES_MODERNIZATION_COMPLETE.md  ar.c  ar.cpp  awk_cpp23.cpp  basename.c  basename.cpp  cal.c  cal.cpp  cat.c  cat.cpp  cat_cpp23.cpp  cc.c  cc.cpp  chmem.c  chmem.cpp  chmod.c  chmod.cpp  chown.c  chown.cpp  clr.c  clr.cpp  cmp.c  cmp.cpp  comm.c  comm.cpp  cp.c  cp.cpp  date.c  date.cpp  dd.c  dd.cpp  df.c  df.cpp  dosread.c  dosread.cpp  (+112 more)
commands/c86/: make.bat
commands/legacy_backup/: mined1_legacy_backup.cpp  pr_legacy_backup.cpp  sort_legacy_backup.cpp
commands/tests/: CMakeLists.txt  test_mined_command_registry.cpp  test_mined_key_command_map.cpp  test_mode_parser.cpp  test_xinim_fs_change_permissions.cpp  test_xinim_fs_copy.cpp  test_xinim_fs_create_directories.cpp  test_xinim_fs_create_directory.cpp  test_xinim_fs_links.cpp  test_xinim_fs_remove.cpp  test_xinim_fs_touch_operations.cpp
crypto/: CMakeLists.txt  kyber 2.cpp  kyber 2.hpp  kyber.cpp  kyber.hpp  kyber_cpp23_simd.cpp  pqcrypto_shared.cpp
crypto/kyber_impl/: api.h  fips202.c  fips202.cpp  fips202.h  fips202.hpp  params.hpp  randombytes.c  randombytes.hpp
fs/: CMakeLists.txt  buf.hpp  buf_globals.cpp  cache.c  cache.cpp  compat.c  compat.cpp  compat.h  compat.hpp  const.hpp  dev.hpp  device.c  device.cpp  extent.h  extent.hpp  file.hpp  file_globals.cpp  filedes.c  filedes.cpp  fproc.hpp  fproc_globals.cpp  glo.hpp  globals.cpp  inode.c  inode.cpp  inode.h  inode.hpp  inode_globals.cpp  link.c  link.cpp  main.c  main.cpp  misc.c  misc.cpp  mount.c  mount.cpp  open.c  open.cpp  param.hpp  path.c  (+25 more)
fs/c86/: _link.bat  linklist  make.bat
fs/minix/: Makefile  makefile  makefile.at
fs/tests/: compat_tests.cpp
kernel/: CMakeLists.txt  Makefile  _link.bat  at_wini.c  at_wini.cpp  clock.c  clock.cpp  console.hpp  const.h  const.hpp  dmp.c  dmp.cpp  fano_octonion 2.hpp  fano_octonion.hpp  fastpath.cpp  fastpath.hpp  floppy.c  floppy.cpp  glo.h  glo.hpp  globals.cpp  idt.hpp  idt64.c  idt64.cpp  interrupts.cpp  klib64.c  klib64.cpp  klib64.s  klib64_old.cpp.disabled  klib88.c  klib88.cpp  klib88.cpp.disabled  klib88.s  lattice_ipc 2.cpp  lattice_ipc.cpp  lattice_ipc.hpp  linker.ld  main.c  main.cpp  make.bat  (+56 more)
kernel/acpi/: acpi.cpp  acpi.hpp
kernel/early/: serial_16550.cpp  serial_16550.hpp
kernel/minix/: Makefile  boot.S  console.hpp  makefile  makefile.at  multiboot 2.hpp  pmm.hpp  vmm.hpp
kernel/sys/: dispatch.cpp
kernel/time/: calibrate.cpp  calibrate.hpp  hpet_timer.hpp  monotonic.cpp  monotonic.hpp
lib/: CMakeLists.txt  Makefile  abort.c  abort.cpp  abs.c  abs.cpp  access.cpp  aether_nn.cpp  alarm.cpp  atoi.cpp  atol.cpp  bcopy.c  bcopy.cpp  brk.cpp  brk2.c  brk2.cpp  brksize.cpp  brksize.s  call.cpp  catchsig.c  catchsig.cpp  catchsig.s  chdir.cpp  chmod.cpp  chown.cpp  chroot.cpp  cleanup.c  cleanup.cpp  close.cpp  creat.cpp  crt0.c  crt0.cpp  crt0.s  crtso.c  crtso.cpp  crypt.c  crypt.cpp  csv.c  csv.cpp  csv.s  (+117 more)
lib/c86/: crtso.asm  getutil.asm  make.bat  prologue.hpp  setjmp.asm
lib/io/: stream_operations.cpp  syscall_wrappers.cpp
lib/minix/: crtso.cpp  end.c  end.cpp  head.cpp  setjmp.c  setjmp.cpp
lib/simd/: CMakeLists.txt
lib/xinim_fs/: CMakeLists.txt  filesystem_ops 2.cpp  filesystem_ops.cpp
mm/: CMakeLists.txt  Makefile  alloc.c  alloc.cpp  alloc.hpp  break.c  break.cpp  const.h  const.hpp  exec.c  exec.cpp  forkexit.c  forkexit.cpp  getset.c  getset.cpp  glo.hpp  globals.cpp  main.c  main.cpp  makefile  mproc.hpp  mproc_globals.cpp  paging.c  paging.cpp  param.hpp  process_slot.cpp  process_slot.hpp  putc.cpp  signal.c  signal.cpp  table.c  table.cpp  token.hpp  type.hpp  utility.c  utility.cpp  vm.c  vm.cpp
mm/c86/: _link.bat  linklist  make.bat
tests/: CMakeLists.txt  randombytes_stub.c  randombytes_stub.cpp  sodium.h  sodium_stub 2.cpp  sodium_stub.cpp  t10a 2  t10a 2.cpp  t11b.cpp  t16a.cpp  task_stubs.cpp  test1.cpp  test11.cpp  test12 2.cpp  test2 2.cpp  test3 2.cpp  test4.cpp  test6.cpp  test9.cpp  test_aether_nn.cpp  test_fastpath.cpp  test_fastpath_cache_performance.cpp  test_fastpath_fallback 2.cpp  test_fastpath_fallback.cpp  test_fastpath_preconditions.cpp  test_fat_time.cpp  test_hypercomplex.cpp  test_lattice 2.cpp  test_lattice.cpp  test_lattice_blocking.cpp  test_lattice_corrupt_packet.cpp  test_lattice_ipc.cpp  test_lattice_ipv6.cpp  test_lattice_network.cpp  test_lattice_network_encrypted.cpp  test_lattice_send_error.cpp  test_lattice_send_recv.cpp  test_lib.cpp  test_memory_stream.cpp  test_net_driver.cpp  (+35 more)
tools/: CMakeLists.txt  Makefile  README 2.md  README.md  arch_scan.py  ascii_tree.py  bootblok.c  bootblok.cpp  bootblok.s  bootblok1.cpp  build.c  build.cpp  build.sh  changeme  classify_style 2.py  clean.sh  code_audit.sh  create_stub_image.sh  cross_compilation_toolchain.cmake  diskio.c  diskio.cpp  diskio.hpp  diskio.s  documentation_coverage.py  find_knr.py  fsck.c  fsck.cpp  fsck1.c  fsck1.cpp  fsck1.s  generate_kr_summary.py  getcore.cpp  header_sanity_check.sh  init.cpp  make_image.sh  make_limine_image.sh  make_qemu_image.sh  makefile  migration_dashboard.py  mkfs.c  (+32 more)
(+1206 files in other folders)
